tests/baselines/reference/plainJSReservedStrict.errors.txt
plainJSReservedStrict.js(2,7): error TS1100: Invalid use of 'eval' in strict mode.
plainJSReservedStrict.js(3,7): error TS1100: Invalid use of 'arguments' in strict mode.


==== plainJSReservedStrict.js (2 errors) ====
    "use strict"
    const eval = 1
          ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    const arguments = 2
          ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
    